# BibleMaxxing

./: .gitignore  AGENTS.md  README.md  goal.md
admin/: AGENTS.md  README.md  moderation-runbook.md
backend/: .env.example  AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: AGENTS.md  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_eval_runs.py  AGENTS.md
backend/app/: AGENTS.md  config.py  database.py  evals.py  main.py  models.py  schemas.py  security.py  services.py  youtube.py  youtube_worker.py
backend/tests/: AGENTS.md  test_api.py
docs/: AGENTS.md  api-surface.md  app-review-submission.md  app-store-compliance.md  app-store-connect-pre-submit.md  app-store-friend-publishing.md  moderation-account-deletion.md  pre-submit-completion-audit.md  qa-checklist.md  recommendation-ingestion-evals.md  verification-log.md  youtube-embed-policy.md
docs/app-store-assets/: AGENTS.md
docs/app-store-assets/screenshots/: AGENTS.md
infra/: AGENTS.md  Caddyfile.biblemaxxing.example  README.md  biblemaxxing.env.example  deploy-tailortom.sh  deployment-plan.md  docker-compose.biblemaxxing.example.yml
ios/: AGENTS.md  README.md
ios/BibleMaxxing.xcodeproj/: AGENTS.md  project.pbxproj
ios/BibleMaxxing.xcodeproj/project.xcworkspace/: AGENTS.md
ios/BibleMaxxing.xcodeproj/xcshareddata/: AGENTS.md
ios/BibleMaxxingApp/: AGENTS.md
ios/BibleMaxxingApp/App/: AGENTS.md  BibleMaxxingApp.swift  (+1 more)
scripts/: AGENTS.md  build_ios_simulator.sh  dev_backend.sh  fetch_youtube_candidates.py  run_evals.py  smoke_api.sh  verify_infinite_scroll.py
(+25 files in other folders)
